--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: 🚀 Deploy Fox Studio a Hostinger
 on:
   push:
     branches:
-      - main 
+      - main
 
 jobs:
   deploy:
@@ -13,20 +13,14 @@ jobs:
       - name: Clonar el código
         uses: actions/checkout@v3
 
-      - name: Subir a Hostinger por SSH
-        uses: appleboy/scp-action@master
+      - name: Configurar SSH Agent
+        uses: webfactory/ssh-agent@v0.5.4
         with:
-          host: ${{ secrets.HOSTINGER_HOST }}
-          username: ${{ secrets.HOSTINGER_USER }}
-          key: ${{ secrets.HOSTINGER_KEY }}
-          port: ${{ secrets.HOSTINGER_PORT }}
-          source: |
-            index.php
-            contacto.php
-            nosotros.php
-            servicios.php
-            php/
-            assets/
-            favicon.ico
-            FoxLogo.webp
-          target: /home/u123456789/domains/foxstudio.com.ar/public_html
+          ssh-private-key: ${{ secrets.HOSTINGER_KEY }}
+
+      - name: Subir archivos con rsync
+        run: |
+          rsync -avz --delete \
+          -e "ssh -p ${{ secrets.HOSTINGER_PORT }} -o StrictHostKeyChecking=no" \
+          index.php contacto.php nosotros.php servicios.php favicon.ico FoxLogo.webp php/ assets/ \
+          ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }}:/home/u745655976/domains/foxstudio.com.ar/public_html/
